show all issues on mobile (probably change this)

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -49,9 +49,17 @@ section {
       transform: scale(1.1);
       color: white;
     }
+
+    @media only screen and (max-width: 800px) {
+      display: none;
+    }
   }
   .left {
     place-self: stretch end;
+  }
+
+  @media only screen and (max-width: 800px) {
+    display: block;
   }
 }
 
@@ -70,6 +78,11 @@ section {
   li {
     flex: 0 0 10rem;
     margin-top: 0.5rem;
+  }
+
+  @media only screen and (max-width: 800px) {
+    flex-flow: column;
+    width: 100%;
   }
 }
 
